// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ts add js extension > should read the code and ensure each import/export statemnt is properly formed for "js/1.js" 1`] = `
"import * as fs from 'fs';
import abcdefgihijk, {
    box,
    dialog,
    table,
    cell,
    div,
    h1,
    h2,
    h4,
    h5,
    h6,
} from './2.js';
import { fs } from './2.js';
import * as sample2 from './2.js';
import * as sampleExport2 from '../js/1.js';
import * as index from './index.js';
import * as index from './index.js';
export { index } from './index.js';
export * as index from './index.js';
export { default as x } from './index.js';
export { default as x } from './index.js';
"
`;

exports[`ts add js extension > should read the code and ensure each import/export statemnt is properly formed for "js/2.js" 1`] = `
"import { sample1 } from './1.js';
import './c.css';
export * from './1.js';
export * from '../js/1.js';
"
`;

exports[`ts add js extension > should read the code and ensure each import/export statemnt is properly formed for "js/3.js" 1`] = `
"import * as sampleExport2 from './2.js';
export * from './1.js';
export * as ays from './1.js';
"
`;

exports[`ts add js extension > should read the code and ensure each import/export statemnt is properly formed for "js/4.mjs" 1`] = `
"import * as sampleExport1 from './1.js';
import * as sampleExport2 from './2.js';
export * from './1.js';
export * as ays from './1.js';
export * as abc from './6.mjs';
"
`;

exports[`ts add js extension > should read the code and ensure each import/export statemnt is properly formed for "js/5.js" 1`] = `
"import * as sampleExport3 from './3.js';
import * as sampleExport4 from './4.mjs';
"
`;

exports[`ts add js extension > should read the code and ensure each import/export statemnt is properly formed for "js/6.mjs" 1`] = `""`;

exports[`ts add js extension > should read the code and ensure each import/export statemnt is properly formed for "js/index.js" 1`] = `
"console.log('hi');
"
`;

exports[`ts add js extension > should read the code and ensure each import/export statemnt is properly formed for "ts/dist/index.d.ts" 1`] = `
"export * from './utils/index.js';
"
`;
